// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopDownloads when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <p
    class="margin-top-0 margin-bottom-1"
  >
    <em>
      Top files downloaded yesterday on Interior hostnames.
    </em>
  </p>
  <div
    class="grid-row"
  >
    <div
      class="display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    >
      <p
        class="margin-top-05 margin-bottom-05"
      >
        <a
          aria-label="top-downloads-yesterday.csv"
          href="http://www.example.com/data//top-downloads-yesterday.csv"
        >
          Download the data
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </p>
    </div>
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="top downloads chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-downloads-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-downloads-7-days"
          >
            7 Days
          </option>
          <option
            value="top-downloads-30-days"
          >
            30 Days
          </option>
          <option
            value="top-downloads-90-days"
          >
            90 Days
          </option>
          <option
            value="top-downloads-current-year"
          >
            Current Year
          </option>
          <option
            value="top-downloads-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-downloads-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-downloads-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
  <figure
    class="top-downloads__bar-chart"
  >
    <div
      class="data chart__bar-chart text--capitalize margin-top-2"
    >
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            <div
              class="grid-row"
            >
              
                
              <div
                class="grid-col-12 text--overflow-ellipsis"
              >
                
                  
                <a
                  href="http://robust-childhood.com"
                  rel="noopener"
                  target="_blank"
                >
                  
                    deploy virtual synergies
                  
                </a>
                
                
              </div>
              
                
              <div
                class="grid-col-12"
              >
                
                  
                <div
                  class="grid-row text--overflow-wrap"
                >
                  
                    
                  <div
                    class="grid-col-auto text--lowercase dark-gray"
                  >
                    
                      
                    <span>
                      robust-childhood.com
                    </span>
                    <span
                      class="padding-x-05"
                    >
                      /
                    </span>
                    
                    
                  </div>
                  
                    
                  <div
                    class="grid-col-auto text--lowercase"
                  >
                    
                      
                    <a
                      href="https://dizzy-ladybug.net"
                      rel="noopener"
                      target="_blank"
                    >
                      
                        download file
                      
                    </a>
                    
                    
                  </div>
                  
                  
                </div>
                
                
              </div>
              
              
            </div>
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            3,048
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 46%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            <div
              class="grid-row"
            >
              
                
              <div
                class="grid-col-12 text--overflow-ellipsis"
              >
                
                  
                <a
                  href="http://early-locality.org"
                  rel="noopener"
                  target="_blank"
                >
                  
                    leverage back-end paradigms
                  
                </a>
                
                
              </div>
              
                
              <div
                class="grid-col-12"
              >
                
                  
                <div
                  class="grid-row text--overflow-wrap"
                >
                  
                    
                  <div
                    class="grid-col-auto text--lowercase dark-gray"
                  >
                    
                      
                    <span>
                      early-locality.org
                    </span>
                    <span
                      class="padding-x-05"
                    >
                      /
                    </span>
                    
                    
                  </div>
                  
                    
                  <div
                    class="grid-col-auto text--lowercase"
                  >
                    
                      
                    <a
                      href="https://questionable-lake.net"
                      rel="noopener"
                      target="_blank"
                    >
                      
                        download file
                      
                    </a>
                    
                    
                  </div>
                  
                  
                </div>
                
                
              </div>
              
              
            </div>
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            6,120
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 91%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            <div
              class="grid-row"
            >
              
                
              <div
                class="grid-col-12 text--overflow-ellipsis"
              >
                
                  
                <a
                  href="http://wide-intervention.name"
                  rel="noopener"
                  target="_blank"
                >
                  
                    orchestrate efficient applications
                  
                </a>
                
                
              </div>
              
                
              <div
                class="grid-col-12"
              >
                
                  
                <div
                  class="grid-row text--overflow-wrap"
                >
                  
                    
                  <div
                    class="grid-col-auto text--lowercase dark-gray"
                  >
                    
                      
                    <span>
                      wide-intervention.name
                    </span>
                    <span
                      class="padding-x-05"
                    >
                      /
                    </span>
                    
                    
                  </div>
                  
                    
                  <div
                    class="grid-col-auto text--lowercase"
                  >
                    
                      
                    <a
                      href="https://kindhearted-opening.biz"
                      rel="noopener"
                      target="_blank"
                    >
                      
                        download file
                      
                    </a>
                    
                    
                  </div>
                  
                  
                </div>
                
                
              </div>
              
              
            </div>
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            4,440
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 66%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            <div
              class="grid-row"
            >
              
                
              <div
                class="grid-col-12 text--overflow-ellipsis"
              >
                
                  
                <a
                  href="http://vain-coil.name"
                  rel="noopener"
                  target="_blank"
                >
                  
                    mesh frictionless networks
                  
                </a>
                
                
              </div>
              
                
              <div
                class="grid-col-12"
              >
                
                  
                <div
                  class="grid-row text--overflow-wrap"
                >
                  
                    
                  <div
                    class="grid-col-auto text--lowercase dark-gray"
                  >
                    
                      
                    <span>
                      vain-coil.name
                    </span>
                    <span
                      class="padding-x-05"
                    >
                      /
                    </span>
                    
                    
                  </div>
                  
                    
                  <div
                    class="grid-col-auto text--lowercase"
                  >
                    
                      
                    <a
                      href="https://crisp-barber.com"
                      rel="noopener"
                      target="_blank"
                    >
                      
                        download file
                      
                    </a>
                    
                    
                  </div>
                  
                  
                </div>
                
                
              </div>
              
              
            </div>
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            494
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 8%;"
          />
        </div>
      </div>
      <div
        class="chart__bar-chart__item margin-bottom-2"
      >
        <div
          class="chart__bar-chart__item__label-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
          >
            <div
              class="grid-row"
            >
              
                
              <div
                class="grid-col-12 text--overflow-ellipsis"
              >
                
                  
                <a
                  href="http://shameful-contest.org"
                  rel="noopener"
                  target="_blank"
                >
                  
                    engineer world-class networks
                  
                </a>
                
                
              </div>
              
                
              <div
                class="grid-col-12"
              >
                
                  
                <div
                  class="grid-row text--overflow-wrap"
                >
                  
                    
                  <div
                    class="grid-col-auto text--lowercase dark-gray"
                  >
                    
                      
                    <span>
                      shameful-contest.org
                    </span>
                    <span
                      class="padding-x-05"
                    >
                      /
                    </span>
                    
                    
                  </div>
                  
                    
                  <div
                    class="grid-col-auto text--lowercase"
                  >
                    
                      
                    <a
                      href="https://open-territory.name"
                      rel="noopener"
                      target="_blank"
                    >
                      
                        download file
                      
                    </a>
                    
                    
                  </div>
                  
                  
                </div>
                
                
              </div>
              
              
            </div>
          </div>
          <div
            class="chart__bar-chart__item__value grid-col-auto text--align-right"
          >
            6,711
          </div>
        </div>
        <div
          class="chart__bar-chart__item__bar-wrapper grid-row"
        >
          <div
            class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopDownloads when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <p
    class="margin-top-0 margin-bottom-1"
  >
    <em>
      Top downloads data yesterday is unavailable for Interior hostnames.
    </em>
  </p>
  <div
    class="grid-row"
  >
    <div
      class="display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    />
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="top downloads chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-downloads-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-downloads-7-days"
          >
            7 Days
          </option>
          <option
            value="top-downloads-30-days"
          >
            30 Days
          </option>
          <option
            value="top-downloads-90-days"
          >
            90 Days
          </option>
          <option
            value="top-downloads-current-year"
          >
            Current Year
          </option>
          <option
            value="top-downloads-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-downloads-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-downloads-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TopDownloads when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <p
    class="margin-top-0 margin-bottom-1"
  >
    <em>
      Top downloads data yesterday is unavailable for Interior hostnames.
    </em>
  </p>
  <div
    class="grid-row"
  >
    <div
      class="display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
    />
    <div
      class="card:grid-col-12 mobile-lg:grid-col-auto"
    >
      <div
        class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
      >
        <select
          aria-label="top downloads chart time filter"
          class="usa-select chart__filter margin-top-0"
        >
          <option
            value="top-downloads-yesterday"
          >
            Yesterday
          </option>
          <option
            value="top-downloads-7-days"
          >
            7 Days
          </option>
          <option
            value="top-downloads-30-days"
          >
            30 Days
          </option>
          <option
            value="top-downloads-90-days"
          >
            90 Days
          </option>
          <option
            value="top-downloads-current-year"
          >
            Current Year
          </option>
          <option
            value="top-downloads-current-fiscal-year"
          >
            Current Fiscal Year
          </option>
          <option
            value="top-downloads-previous-year"
          >
            Previous Year
          </option>
          <option
            value="top-downloads-previous-fiscal-year"
          >
            Previous Fiscal Year
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
